# Recall

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_BUILD_GUIDE.md  README.md  install.sh  pyproject.toml  setup_wizard.py
.github/hooks/: superset-notify.json
.github/workflows/: moss-ci.yml
Formula/: recall.rb
app/: README.md  index.html  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/.build/sidecar-aarch64-apple-darwin/: recall-daemon-aarch64-apple-darwin.spec
app/.build/sidecar-aarch64-apple-darwin/work/recall-daemon-aarch64-apple-darwin/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  recall-daemon-aarch64-apple-darwin.pkg  warn-recall-daemon-aarch64-apple-darwin.txt
app/scripts/: build-sidecar.sh
app/src/: App.tsx  main.tsx
app/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: oauth_success.html
app/src-tauri/src/: commands.rs  daemon_client.rs  hotkey.rs  keychain.rs  lib.rs  local_config.rs  main.rs  sidecar.rs  tray.rs  windows.rs
app/src-tauri/src/oauth/: google.rs  mod.rs
app/src/components/: Button.tsx  Chip.tsx  EmptyState.tsx  KeyHint.tsx
app/src/lib/: daemon.ts  ipc.ts  theme.ts
app/src/overlay/: Spotlight.tsx
app/src/palette/: CommandPalette.tsx
app/src/routes/Activity/: index.tsx
app/src/routes/Folders/: index.tsx
app/src/routes/Onboarding/: ConnectorStep.tsx  FolderStep.tsx  ProviderStep.tsx  SyncStep.tsx  index.tsx
app/src/routes/Search/: ResultPreview.tsx  index.tsx
app/src/routes/Settings/: index.tsx
app/src/routes/Sources/: index.tsx
app/src/styles/: globals.css
docs/: architecture.md  cli-reference.md  daemon-api.md  troubleshooting.md
docs/architecture/: local-first-semantic-layer.md
docs/images/: wizard-screens.html
moss1/: Cargo.toml  README.md
moss1/crates/moss-bench/: Cargo.toml
moss1/crates/moss-bench/src/: main.rs
moss1/crates/moss-core/: Cargo.toml
moss1/crates/moss-core/benches/: latency_recall.rs
moss1/crates/moss-core/src/: cache.rs  client.rs  config.rs  distance.rs  error.rs  lib.rs  query.rs  telemetry.rs  token_budget.rs  types.rs
moss1/crates/moss-core/src/index/: flat.rs  hnsw.rs  mod.rs
moss1/crates/moss-core/tests/: shared_protocol.rs
moss1/crates/moss-wasm/: Cargo.toml
moss1/crates/moss-wasm/src/: lib.rs
moss1/protocol/: README.md  shared-protocol.schema.json
moss1/protocol/cases/: mvp-smoke.json
moss1/sdk/browser/: tsconfig.json
moss1/sdk/browser/src/: client.ts  types.ts
raycast/: package-lock.json  package.json  pnpm-lock.yaml  raycast-env.d.ts  tsconfig.json
raycast/src/: calendar-today.tsx  email-search.tsx  manage.tsx  open-memory.tsx  search-memory.tsx  sync-status.tsx
raycast/src/components/: ResultCard.tsx
raycast/src/lib/: runner.ts
tests/: conftest.py  test_cli.py  test_connectors.py  test_daemon_http.py  test_ingest.py  test_keychain.py  test_reranker.py  test_search.py
vector_embedded_finder/: __init__.py  _sidecar_entry.py  captioner.py  cli.py  config.py  daemon.py  embedder.py  ingest.py  keychain.py  mcp_server.py  migration.py  model_manager.py  reranker.py  search.py  store.py  utils.py  watcher.py
vector_embedded_finder/connectors/: __init__.py  base.py  calai.py  canvas.py  gcal.py  gdrive.py  gmail.py  notion.py  schoology.py
