[package]
name = "recall-app"
version = "0.4.0"
description = "Recall — local-first semantic memory for macOS"
authors = ["aayu22809"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "recall_app_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

oauth2 = "4"
url = "2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

keyring = "3"

dirs = "5"
log = "0.4"
once_cell = "1"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
