[package]
name = "moss-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]
std = ["dep:serde_json"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

